src/index.css
body {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: white;
  font-family: Arial;
  color: white;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

@font-face {
    font-family: mismo;
    src: url('./fonts/Mismo Regular.ttf');
}

.table-holder{
    border: 10px solid #2B2B75;
    background-color: #2B2B75;
    max-height: 500px;
    overflow: auto;
}

.table-outer{
    border: 10px solid #2B2B75;
    background-color: #2B2B75;
    height: 600px;
}

table {
    background-color: #E6E6E6;
    border: 10px solid #2B2B75;
    border-collapse:collapse;
    font-size: medium;
    color: black;
    height: auto;
    width: 100%;
    display: table;
    align: center;
}

th, td {
    border: 1px solid black;
}

tr{
    height: 50px;
}

th {
    padding: 10px;
}

#header-div{
    background-color: #2B2B75;
    font-family: mismo;
}

.data { 
  overflow: none;
}

.test {
  border-style: solid;
  margin: 0px; 
}
.rowTest {
  border-style: solid;
  color: red;

}

.header{
    color: #F7F8E0;
}

.fill {
  height : 100%;
  width : 100%;
}

.chart{
    color:black;
    border-color: white;
    border-width: 5px;
    background-color: #E6E6E6;
    padding: 8px;
}

#dataForm{
    color: #F7F8E0;
    border-color: white;
    background-color:  #2B2B75;
    border-width: 5px;
}

.box {
  min-height: 30vh;
  display: flex;
  flex-direction: column;
  /*max-height: 30vh; */
  background-color: #E6E6E6;
}

.side {
  height: 90vh; 
  /*max-height: 90vh; */
  float: right;
}

.bar {
  height: 17vh;
  max-height: 17vh;
  min-height:17vh;
  padding: 1em;
  background-color: #ddd;
}


.filter-label{
    font-size: small;
}

.filter-select {
    font-size: x-small;
    width: 100%;
    background-color: #E6E6E6;
}

.clear-button{
    width: 100%;
    margin-top: 8px;
    margin-bottom: 8px;
    background-color: #E6E6E6;
}

.time-select{
    width: 50%;
    background-color: #E6E6E6;
    margin-bottom: 10px;
}

.date-select{
    width: 50%;
    background-color: #E6E6E6;
}

.aligned input{
    float: left;
    font-size: x-small;
}

.small-label{
    font-size: small;
    margin-top: 5px;
}

.filter-show-button{
    font-size: xx-small;
    background-color: #E6E6E6;
}

.leaflet-container {
    height: 100%;
    width: 100%;
}

.filter-title{
    color: #E6E6E6;
}

#filter-box {
    margin-top: 10px;
    font-size: 21px;
    text-align: center;

    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
    -moz-animation: fadein 2s; /* Firefox < 16 */
    -ms-animation: fadein 2s; /* Internet Explorer */
    -o-animation: fadein 2s; /* Opera < 12.1 */
    animation: fadein 2s;
}

.loader {
    border: 16px solid #f3f3f3; /* Light grey */
    border-top: 16px solid #3498db; /* Blue */
    border-radius: 50%;
    width: 100px;
    height: 100px;
    animation: spin 1s linear infinite;
    margin: auto;
    margin-top: 100%;
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

@keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Firefox < 16 */
@-moz-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Safari, Chrome and Opera > 12.1 */
@-webkit-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Internet Explorer */
@-ms-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

